# myresume

./: .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  setup.cfg  setup.py
examples/: .charlie.yaml.swp  charlie.html  charlie.yaml
myresume/: __init__.py  cli.py  filters.py
myresume/themes/default/: resume.html  style.css
src/myresume/: __init__.py  cli.py  filters.py
src/myresume/themes/default/: resume.html  style.css
src/myresume/themes/plain/: resume.html  style.css
tests/: .test_myresume.py.swo  charlie.yaml  lib.py  test_cli.py  test_filters.py  test_myresume.py
