[metadata]
name = myresume
version = 0.0.1
description = Create resumes from YAML description files
long_description = file: README.md
author = Albert Hopkins
author_email = marduk@letterboxes.org
url = https://github.com/enku/myresume
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    Jinja2 ~= 2.11.2
    PyYAML ~= 5.3.1
tests_require =
    coverage
test_suite = tests

[options.entry_points]
console_scripts =
    myresume = myresume.cli:main
myresume.themes =
    default = myresume.themes.default
